fixed header width, image alignment fixed

--- a/style/base.css
+++ b/style/base.css
@@ -3929,12 +3929,20 @@ ul.template-widget-list
 		.template-component-gallery .template-component-gallery-image-list
 		{
 			transition:all 0.4s ease 0s;
+			display: flex;
+			justify-content: flex-start;
+			flex-wrap: wrap; 
+			gap: 10px;
+			margin-bottom: 20px;
+			height: auto !important;
 		}
 		
 			.template-component-gallery .template-component-gallery-image-list>li
 			{
 				width:100%;
-				margin-bottom:60px;
+				margin-bottom: 10px;
+				max-width: fit-content !important;
+				position: static !important;
 			}
 			
 			.template-component-gallery .template-component-gallery-image-list>li.template-component-gallery-image-list-width-2
